# hw

./: .gitignore  README.md  TC-gcc-cuda-x86_64.cmake  bamboo_rpm.sh  cmake_setup.sh  local_setup.sh  module_setup.sh  run_citest.sh  setup-thirdparty.cmake
doc/: CMakeLists.txt  doc_accessor_TEMPLATE.cpp  dochelp.h  install_python3.sh  kes-paws-rest-api.md  kes-paws-rest-api.yaml  render_md2html.sh
src/app-common/: CMakeLists.txt  HttpHelpers.cpp  HttpHelpers.h  Locked.cpp  MemInfo.cpp  MemInfo.h  ProgressMessage.h
src/app-common/nexus-versions/: Fetchexpect.cmake  Fetchgtest.cmake  Fetchhdf5.cmake  Fetchzeromq.cmake  Fetchzlib.cmake
src/app-common/test/: CMakeLists.txt  testBarrier.cpp  testLocked.cpp  testMain.cpp  testMemInfo.cpp  testProgressMessage.cpp
src/basecaller/: .gitignore  CMakeLists.txt  Config.h.in  README.md  TC-gcc-cuda-x86_64.cmake  TC-gcc-x86_64.cmake  TC-icc-cuda-x86_64.cmake  build.sh  cmake_setup.sh  local_setup.sh  module_setup.sh  mongo-config.cmake  mongo-tbb.cmake  setup-thirdparty.cmake
src/basecaller/appModules/: Basecaller.cpp  Basecaller.h  BazWriter.cpp  BazWriter.h  BazWriterBody.cpp  BazWriterBody.h  BlockRepacker.cpp  BlockRepacker.h  CMakeLists.txt  DataFileWriter.h  Metrics.cpp  Metrics.h  PrelimHQFilter.cpp  PrelimHQFilter.h  RealTimeMetrics.cpp  RealTimeMetrics.h  Repacker.cpp  Repacker.h  SimulatedDataSource.cpp  SimulatedDataSource.h  SmrtBasecallerProgress.h  TraceDataSource.h  TraceFileDataSource.cpp  TraceFileDataSource.h  TraceFileWriter.h  TraceSaver.cpp  TraceSaver.h  TrivialRepacker.cpp  TrivialRepacker.h
src/basecaller/applications/: 4x_launch.sh  Basecaller.cpp  Basecaller.h  BazWriter.cpp  BazWriter.h  CMakeLists.txt  ConsoleApp.cpp  CudaAllocator.cpp  CudaAllocator.h  Repacker.cpp  Repacker.h  SmrtBasecaller.cpp  TraceDataSource.cpp  TraceDataSource.h  TraceFileDataSource.cpp  TraceFileDataSource.h  TraceSaver.cpp  numa_launch.sh  smrt-basecaller-launch.sh
src/basecaller/bamboo/: build.sh
src/basecaller/basecaller/: CMakeLists.txt
src/basecaller/common/: ActivityLabeler.h  AlignedCircularBuffer.h  AlignedVector.h  AutocorrAccumState.cpp  AutocorrAccumState.h  AutocorrAccumulator.cpp  AutocorrAccumulator.h  BatchDataSource.h  BlockActivityLabels.h  CMakeLists.txt  CircularArray.h  IntInterval.h  LaneArray.cpp  LaneArray.h  LaneArrayRef.h  LaneArray_fwd.h  LaneMask.h  MongoConstants.h  NumericUtil.cpp  NumericUtil.h  StatAccumState.h  StatAccumulator.h
src/basecaller/dataTypes/: AnalogMode.h  BasecallBatch.cpp  BasecallBatch.h  BasecallerConfig.h  BasecallingMetrics.cpp  BasecallingMetrics.h  BasecallingMetricsAccumulator.cpp  BasecallingMetricsAccumulator.h  BaselineStats.cpp  BaselineStats.h  BaselinerStatAccumState.h  BaselinerStatAccumulator.cpp  BaselinerStatAccumulator.h  BasicTypes.h  BatchData.cpp  BatchData.cu  BatchData.cuh  BatchData.h  BatchMetadata.cpp  BatchMetadata.h  BatchMetrics.h  BatchResult.cpp  BatchResult.h  BatchVectors.cpp  BatchVectors.cu  BatchVectors.cuh  BatchVectors.h  CMakeLists.txt  CameraTraceBatch.cpp  CameraTraceBatch.h  ConfigForward.h  DetectionModel.cpp  DetectionModel.cu  DetectionModel.cuh  DetectionModel.h  DetectionModelHost.cpp  DetectionModelHost.h  HQRFPhysicalStates.h  LabelsBatch.cpp  LabelsBatch.h  (+33 more)
src/basecaller/nexus-versions/: Fetchboost.cmake  Fetchcommon.cmake  Fetcheigen.cmake  Fetchgbench.cmake  Fetchhwmongo.cmake  Fetchjemalloc.cmake  Fetchopenht.cmake  Fetchpbbam.cmake  Fetchseqan.cmake  Fetchspoa.cmake  Fetchzlib.cmake
src/basecaller/prototypes/: CMakeLists.txt  cmake_setup.sh
src/basecaller/scripts/: 3hour.sh  fix_wx2.sh  ptsd-793_basecalling.sh  ptsd-793_capture.sh  start_pa_mongo.sh  wx_integration.sh
src/basecaller/sequel-common/: README
src/bazio/: BazBuffer.h  BazCore.h  BazEventData.cpp  BazEventData.h  BazIOConfig.h  BazReader.cpp  BazReader.h  BazWriter.cpp  BazWriter.h  BlockActivityLabels.cpp  BlockActivityLabels.h  BlockLevelMetrics.cpp  BlockLevelMetrics.h  CMakeLists.txt  Codec.h  DataParsing.cpp  DataParsing.h  FastaEntry.h  FastaUtilities.h  FieldType.h  FileFooter.h  FileHeader.cpp  FileHeader.h  FileHeaderBuilder.cpp  FileHeaderBuilder.h  FileHeaderValidator.h  FloatFixedCodec.h  ManuallyBufferedFile.cpp  ManuallyBufferedFile.h  MetricBlock.h  MetricData.h  MetricField.h  MetricFieldMap.cpp  MetricFieldMap.h  MetricFieldName.h  MetricFrequency.h  PacketField.h  PacketFieldMap.cpp  PacketFieldMap.h  PacketFieldName.h  (+18 more)
src/bazio/bazviewer/: CMakeLists.txt  bazviewer.cpp
src/bazio/encoding/: BazToPulse.cpp  BazToPulse.h  BazioEnableCuda.h  CMakeLists.txt  EncodingParams.cpp  EncodingParams.h  FieldAccessors.cpp  FieldAccessors.h  FieldNames.h  FieldSerializers.cpp  FieldSerializers.h  FieldTransforms.cpp  FieldTransforms.h  ObjectToBaz.cpp  ObjectToBaz.h  PulseGroups.h  PulseToBaz.cpp  PulseToBaz.h  Types.h
src/bazio/file/: CMakeLists.txt  FileFooterSet.cpp  FileFooterSet.h  FileHeader.cpp  FileHeader.h  FileHeaderBuilder.cpp  FileHeaderBuilder.h  FileHeaderSet.cpp  FileHeaderSet.h  RunLength.cpp  RunLength.h  ZmwInfo.cpp  ZmwInfo.h
src/bazio/template/: BazVersion.h.in
src/bazio/writing/: BazAggregator.cpp  BazAggregator.h  BazBuffer.cpp  BazBuffer.h  BazBuffer.hpp  BazWriter.cpp  BazWriter.h  CMakeLists.txt  GrowableArray.cpp  GrowableArray.h  MemoryBuffer.cpp  MemoryBuffer.h  MetricBlock.cpp  MetricBlock.h  MetricBuffer.cpp  MetricBuffer.h  MetricBufferManager.cpp  MetricBufferManager.h  PacketBuffer.cpp  (+3 more)
src/common/: Barrier.cpp  Barrier.h  CMakeLists.txt  Locked.h  ThreadController.h
src/pa-cal/: CMakeLists.txt  ExitCodes.h  FrameAnalyzer.cpp  FrameAnalyzer.h  PaCalConfig.cpp  PaCalConfig.h  PaCalConstants.h  PaCalProcess.cpp  PaCalProcess.h  PaCalProgressMessage.h  README.md  SignalSimulator.cpp  SignalSimulator.h  main.cpp
src/pa-ws/: CMakeLists.txt  ExitCodes.h  PaWsConfig.cpp  PaWsConfig.h  PaWsConstants.h  PaWsProcess.cpp  PaWsProcess.h  README.md  WebService.cpp  WebService.h  main.cpp  mockup.cpp  mockup.h
src/postprimary/: CMakeLists.txt  README.md  centos6-recalladapters.run  cmake_setup.sh  publish.sh
(+1076 files in other folders)
